[gd_scene load_steps=10 format=2]

[ext_resource path="res://LocalMultiplayer/HUD.gd" type="Script" id=1]
[ext_resource path="res://outline_material.tres" type="Material" id=2]
[ext_resource path="res://Assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/WeaponSlots.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="Shader" id=3]

resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 outline_color : hint_color;
uniform float outline_width = 2;

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	
	float dx = ps.x * outline_width;
	float dy = ps.y * outline_width;
	
	float hs = 0.70711; // sqrt(2) / 2
	float hx = dx * hs;
	float hy = dy * hs;
	
	float a = (
		texture(TEXTURE, UV + vec2(dx, .0)).a +
		texture(TEXTURE, UV + vec2(-dx, .0)).a +
		texture(TEXTURE, UV + vec2(.0, dy)).a +
		texture(TEXTURE, UV + vec2(.0, -dy)).a +
		
		texture(TEXTURE, UV + vec2(hx, hy)).a +
		texture(TEXTURE, UV + vec2(-hx, hy)).a +
		texture(TEXTURE, UV + vec2(hx, -hy)).a +
		texture(TEXTURE, UV + vec2(-hx, -hy)).a
	);
	
	vec4 original = texture(TEXTURE, UV);
	float blend = max(0.0, a - 7.0);
	vec4 mixed = mix(outline_color, original, blend);
	COLOR = vec4(mixed.rgb, original.a);
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = SubResource( 3 )
shader_param/outline_color = null
shader_param/outline_width = 2.5
_sections_unfolded = [ "Resource", "shader_param" ]

[sub_resource type="DynamicFont" id=5]

size = 94
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="P1Score" type="Label" parent="." index="0"]

material = ExtResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 20.0
margin_right = 258.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "P1 Lives: -"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "custom_fonts" ]

[node name="P2Score" type="Label" parent="." index="1"]

material = ExtResource( 2 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -295.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 81.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "P2 Lives: -"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Material", "custom_fonts" ]

[node name="GameOver" type="Label" parent="." index="2"]

visible = false
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -515.0
margin_top = -177.0
margin_right = 515.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Game Over!
P? Wins"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Material", "custom_fonts" ]

[node name="P1WeaponSlots" parent="." index="3" instance=ExtResource( 4 )]

[node name="P2WeaponSlots" parent="." index="4" instance=ExtResource( 4 )]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -355.0
margin_right = 250.0
margin_bottom = 355.0
rect_scale = Vector2( -1, 1 )


